# PlutSC

./: .gitignore  CHANGELOG.md  PlutSC.cabal  Plutz.cabal  README.md  cabal.project
app/: Main.hs
app/smart-contracts/: AlwaysSucceeds.hs  CustomDtm137.hs  CustomRdmr137.hs  HelloDatum.hs  TimeLockingBasic.hs  TimeLockingParam.hs  Typed137.hs  Untyped137.hs
compiled-scripts/: customDtm137-v2.plutus  customrdmr137-v2.plutus  hellodatum-v2.plutus  time-locking-basic-v2.plutus  time-locking-param-v2.plutus  typed137-v2.plutus  untyped137-v2.plutus
crypt/addrs/: customDtm137.addr
scripts/: hash_data.sh  hash_val.sh  query_all_utxo.sh  scr_addr.sh  test.json  test_cmplx.json
smart-contracts/: AlwaysSucceeds.hs  HelloDatum.hs
