cabal-version:      2.4
name:               Plutz
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Trevor Knott
maintainer:         @Cardanymouz

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable Plutz
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:  HelloDatum
                    , AlwaysSucceeds
                    , Untyped137, Typed137
                    -- , CustomRdmr137

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                     , aeson
                     , bytestring
                     , containers
                     , cardano-api
                     , data-default
                     , freer-extras
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-script-utils
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
                     , serialise
    hs-source-dirs:   app, app/smart-contracts
    default-language: Haskell2010
    ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise


library
  hs-source-dirs:      app/smart-contracts
  exposed-modules:     HelloDatum
                     , AlwaysSucceeds
                     , Untyped137, Typed137
                     -- , CustomRdmr137

  build-depends:       aeson
                     , base ^>=4.14.3.0
                     , bytestring
                     , containers
                     , cardano-api
                     , data-default
                     , freer-extras
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-script-utils
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
                     , serialise
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
